deploy/mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kb-mysql
spec:
  serviceName: "mysql"
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.4
          ports:
            - containerPort: 3306
          args:
            - --mysql-native-password=ON
          readinessProbe:
            exec:
              command: ['mysqladmin', 'ping', '-h', 'localhost']
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
---

# Service
apiVersion: v1
kind: Service
metadata:
  name: kb-mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
